# hft-pm

./: .env.example  .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  MONITOR.md  README.md  pyproject.toml
configs/: example.yaml  thunder_paper.yaml
docs/: hft_prediction_markets_EN.md  results_real_data.md
scripts/: calibrate_strategy.py  capture_data.py  paper_trade.py  run_backtest.py
src/hft_pm/: __init__.py  config.py
src/hft_pm/data/: __init__.py  polymarket_ws.py  replay.py  schemas.py  writer.py
src/hft_pm/fees/: __init__.py  polymarket.py
src/hft_pm/hawkes/: __init__.py  intensity.py  mle.py
src/hft_pm/live/: __init__.py  paper_trade.py
src/hft_pm/orderbook/: __init__.py  events.py  l2_book.py
src/hft_pm/risk/: __init__.py  limits.py
src/hft_pm/signals/: __init__.py  calibration.py  microprice.py  ofi.py  vpin.py
src/hft_pm/simulator/: __init__.py  engine.py  latency.py  metrics.py  synthetic.py
src/hft_pm/strategies/: __init__.py  avellaneda_stoikov.py  base.py  constant_spread.py  factory.py  glt.py  quoting.py
src/hft_pm/validation/: __init__.py  deflated_sharpe.py  delay_injection.py  purged_cv.py  (+1 more)
tests/integration/: test_as_beats_cs.py  test_cli_smoke.py  test_jump_survival.py  test_signals_improve_pnl.py  test_validation_suite.py
tests/unit/: test_calibration.py  test_config.py  test_engine.py  test_fees.py  test_hawkes.py  test_l2_book.py  test_latency.py  test_paper_trade.py  test_polymarket_ws.py  test_replay.py  test_risk_limits.py  test_schemas.py  test_signals.py  test_strategies.py  test_strategy_factory.py  test_synthetic.py  test_validation.py  test_writer.py
