[project]
name = "hft-pm"
version = "0.1.0"
description = "HFT market-making bot for prediction markets (Polymarket V2)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "hft-pm" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "sortedcontainers>=2.4",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
live = [
    # Polymarket V2 SDK. Phase 1 does not import this; it's a placeholder for
    # the live/ module that arrives later in the roadmap.
    "py-clob-client-v2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hft_pm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF002/RUF003: Greek letters (σ, γ, κ, α) and Unicode minus/dashes in
# docstrings and comments are intentional math notation and should NOT
# be replaced with ASCII look-alikes.
ignore = ["B008", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/hft_pm"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with -m 'not integration')",
]
